2007-11-14  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (PyObj_from_UTF8): New function.  Used in lots
	of places where text attributes are decoded (part of bug #382291).

2007-10-15  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Version 1.9.28.

2007-10-15  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getDests): Add a (None,None) entry
	for the default printer.

2007-09-19  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Version 1.9.27.

2007-09-19  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (PyObject_from_attr_value): IPP_TAG_NOVALUE
	tags are now handled, and are translated as None.

2007-09-12  Tim Waugh  <twaugh@redhat.com>

	* cupsmodule.c: Missed some doc strings.

2007-09-12  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Version 1.9.26.

2007-09-12  Tim Waugh  <twaugh@redhat.com>

	* cupsppd.c: Better doc strings throughout.

2007-09-11  Tim Waugh  <twaugh@redhat.com>

	* cupsppd.c: Start of better doc strings for PPD functions.

2007-09-07  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c: Better doc strings throughout.

2007-09-06  Tim Waugh  <twaugh@redhat.com>

	* Makefile (doc): New rule.

	* cupsconnection.c: Start of better documentation.

2007-08-30  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Version 1.9.25.

2007-08-30  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_adminGetServerSettings): Fix
	compilation with CUPS 1.3.
	(Connection_adminSetServerSettings): Likewise.

	* Makefile: Removed 'tag' target, updated 'dist' target for svn.

	* cupsconnection.c (Connection_getServerPPD): New method.

	* cupsmodule.c (initcups): Define CUPS_SERVER_REMOTE_ANY.

	* cupsmodule.h: Check for CUPS 1.3.

2007-07-06  Tim Waugh  <twaugh@redhat.com>

	* cupsppd.c: Better docstring for PPD.markOption.

2007-06-08  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Ship examples directory correctly.

2007-06-08  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Version 1.9.24.

2007-06-08  Tim Waugh  <twaugh@redhat.com>
