@@ -2,6 +2,8 @@
 
 	* cupsconnection.c (PyObj_from_UTF8): New function.  Used in lots
 	of places where text attributes are decoded (part of bug #382291).
+	(UTF8_from_PyObj): New function.  Used in lots of places where
+	text attributes are given in a request (rest of bug #382291).
 
 2007-10-15  Tim Waugh  <twaugh@redhat.com>
 
